// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds \`dataTest\` prop 1`] = `
<ForwardRef
  dataTest="Duck"
>
  <ForwardRef
    dataTest="Duck"
  >
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight"
      data-test="Duck"
      type="button"
    >
      <span
        className="flexWrapper"
      >
        Goose
      </span>
    </button>
  </ForwardRef>
</ForwardRef>
`;

exports[`adds \`dataTest\` prop 2`] = `
<ForwardRef
  dataTest="Duck"
>
  <ForwardRef
    dataTest="Duck"
  >
    <button
      className="plain"
      data-test="Duck"
      type="button"
    >
      Goose
    </button>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders button of type \`button\` by default 1`] = `
<ForwardRef>
  <ForwardRef>
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight"
      type="button"
    >
      <span
        className="flexWrapper"
      >
        Goose
      </span>
    </button>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders button of type \`button\` by default 2`] = `
<ForwardRef>
  <ForwardRef>
    <button
      className="plain"
      type="button"
    >
      Goose
    </button>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders button of type \`submit\` when \`type\` is set 1`] = `
<ForwardRef
  type="submit"
>
  <ForwardRef
    type="submit"
  >
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight"
      type="submit"
    >
      <span
        className="flexWrapper"
      >
        Goose
      </span>
    </button>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders button of type \`submit\` when \`type\` is set 2`] = `
<ForwardRef
  type="submit"
>
  <ForwardRef
    type="submit"
  >
    <button
      className="plain"
      type="submit"
    >
      Goose
    </button>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders children passed in 1`] = `
<ForwardRef>
  <ForwardRef>
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight"
      type="button"
    >
      <span
        className="flexWrapper"
      >
        Goose
      </span>
    </button>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders children passed in 2`] = `
<ForwardRef>
  <ForwardRef>
    <button
      className="plain"
      type="button"
    >
      Goose
    </button>
  </ForwardRef>
</ForwardRef>
`;

exports[`renders icon that is passed in 1`] = `
<ForwardRef
  icon={
    <svg>
      Duck
    </svg>
  }
>
  <ForwardRef
    icon={
      <svg>
        Duck
      </svg>
    }
  >
    <button
      className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight"
      type="button"
    >
      <span
        className="flexWrapper"
      >
        <span
          className="flexCenter"
        >
          <span
            className="iconContainer iconContainerHasChildren"
          >
            <svg>
              Duck
            </svg>
          </span>
          Goose
        </span>
      </span>
    </button>
  </ForwardRef>
</ForwardRef>
`;
